table wrap issue fixed

--- a/src/pages/Dashboard/salesPulseCard/SalesPulseCard.module.css
+++ b/src/pages/Dashboard/salesPulseCard/SalesPulseCard.module.css
@@ -11,6 +11,17 @@
   justify-content: space-between;
   align-items: center;
 }
+.title {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.info {
+  font-size: 14px;
+  cursor: pointer;
+  color: #6b7280;
+}
 
 .toggle button {
   background: transparent;
