--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -114,6 +114,7 @@ tbody tr {
   display: flex;
   align-items: center;
   gap: 10px;
+  text-wrap: wrap;
 }
 
 .productCell img {
